--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,13 +15,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "20"
+          node-version: "14"
 
       - name: Install dependencies
         run: yarn install
 
       - name: Run ESLint
-        run: yarn lint
+        run: yarn lint --ext js,jsx --report-unused-disable-directives
 
       - name: Upload ESLint results
         uses: actions/upload-artifact@v2
