:boom: fix: adicionando prettier na pipeline

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -28,3 +28,6 @@ jobs:
         with:
           name: eslint-results
           path: .eslintcache
+
+      - name: Run Prettier
+        run: npx prettier . --check
