--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "jscpd": "^3.5.10",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "object-path": "^0.11.8",
