--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "14" # Escolha a versão do Node.js adequada
+          node-version: "16" # Atualizado para a versão 16 para garantir compatibilidade com styled-components
 
       - name: Install dependencies
         run: yarn install
@@ -33,4 +33,4 @@ jobs:
         run: yarn prettier . --check
 
       - name: Run JSCPD
-        run: jscpd path/to/your/code --check
+        run: npx jscpd path/to/your/code --check
