--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "16" # Atualizado para a versão 16 para garantir compatibilidade com styled-components
+          node-version: "16" # Atualizado para a versão 16 para garantir compatibilidade com o pacote `vite`
 
       - name: Install dependencies
         run: yarn install
