--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -33,4 +33,4 @@ jobs:
         run: yarn prettier . --check
 
       - name: Run JSCPD
-        run: jscpd src/ --check
+        run: npx jscpd src/ --check
