--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -11,7 +11,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -21,13 +20,15 @@ jobs:
         run: |
           yarn install --frozen-lockfile --ignore-engines
       - name: instalação do jscpd
-        run: cd movieflix
+        run: |
+          cd movieflix
           yarn add -g jscpd
-        
+
       - name: execução do jscpd
-        run: cd movieflix
+        run: |
+          cd movieflix
           npx jscpd --exitCode 1 .    
-        
+
       - name: Run ESLint
         run: yarn lint --ext js,jsx --report-unused-disable-directives
 
@@ -39,5 +40,3 @@ jobs:
 
       - name: Run Prettier
         run: yarn prettier . --check
-
-
