Add detector de referência circular na pipeline

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -35,4 +35,6 @@ jobs:
       - name: Run Prettier
         run: yarn prettier . --check
 
+      - name: Run Circular Dependency Check
+        run: yarn check:circles
 
